| Bug #34244 | Test ndb_binlog_log_bin fails for 'drop table if exists t1,t2,t3' | ||
|---|---|---|---|
| Submitted: | 2 Feb 2008 6:58 | Modified: | 6 Feb 2008 17:46 |
| Reporter: | Mats Kindahl | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | Tests: Cluster | Severity: | S7 (Test Cases) |
| Version: | 5.1.24 bk | OS: | Any |
| Assigned to: | Mats Kindahl | CPU Architecture: | Any |
[2 Feb 2008 6:58]
Mats Kindahl
[3 Feb 2008 10:48]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/41607 ChangeSet@1.2525, 2008-02-03 11:48:45+01:00, mkindahl@dl145h.mysql.com +4 -0 Bug #34244 Test ndb_binlog_log_bin fails for 'drop table if exists t1,t2,t3' Bug #34245 Test ndb_binlog_multi fails for 'CREATE TABLE' Bug #34246 Test rpl_ndb_transaction fails with 'Failed to create 'mysql/ndb_apply_status' Tests cases didn't wait for cluster to come up due to a typo in have_multi_ndb.inc.
[5 Feb 2008 13:03]
Bugs System
Pushed into 5.1.24-rc
[5 Feb 2008 13:07]
Bugs System
Pushed into 6.0.5-alpha
[6 Feb 2008 17:46]
Paul DuBois
Test case change. No changelog entry needed.
