Bug #34244 Test ndb_binlog_log_bin fails for 'drop table if            exists t1,t2,t3' Bug #34245 Test ndb_binlog_multi fails for 'CREATE TABLE' Bug #34246 Test rpl_ndb_transaction fails with 'Failed to create            'mysql/ndb_apply_status'

Tests cases didn't wait for cluster to come up due to a typo
in have_multi_ndb.inc.